2016/08/08	Merged ARPHRD_6LOWPAN netlink query from <Alexander Aring>
		Add systemd service file <Craig Andrews>

2016/07/05	Fixed bug in new vs old address list comparison when
		responding to netlink messages.
		Release v2.14

2016/04/02	Fix netlink bug where RADVD reacts to RTM_NEWADDR
		messages when there weren't actually any new addresses
		to be found.  Those RTM_NEWADDR messages were only
		sent when NetworkManager was running (which is just
		about always).
		Release v2.13

2016/02/01	process.c: fixup ugly overflow check
		radvd.conf.5.man: minor fixup to 'client' option
		radvd.conf.5.man: update abro usage
		gram.y: deprecate abro prefix length
		device-linux.c: IEEE 802.15.4 musl libc fix
		send.c: seconds/miliseconds comparison fix
		send.c: preferred lifetime RFC 4862, 5.5.3 fix
		defaults.h: remaining lifetime RFC 4862 fix
		radvdump: show routes with prefixlen > 64


2015/04/09	added --without-check option to configure <James Guthrie>
		Release v2.11

2015/01/22	Reverted random delay work because it broke detecting new
			interfaces in a timely manor. <Lonnie>
		Release v2.10
		Drop md5sum and bz2 packages

2014/12/31	Fix new interface coming up such that it is setup immediately.
		This fixes a regression in the 2.x branch from 1.x <volker>

2014/11/16	Fix missing random delay before sending RA.
		Fix config file crash when no auto-select prefixes are found
			debian-bug-716831

2014/10/06	Remove autoconf=0 code
		Fix memory leak after getting SIGHUP
		release v2.8

2014/09/10	Move privsep after daemonp call to avoid doing the same
			things deamonp does in privsep.
		release v2.7

2014/09/03	Write PID file from child, signal parent when complete
		Normalize some logging to read like headlines
		release v2.6

2014/08/04	release v2.5

2014/06/03	Added autogen.sh

2014/08/02	Limit non-ready interface to a much longer min timeout
		Move disable_ipv6_autoconfig to privsep
		cleanup some logging
		cleaned up some memory leaks
